Ran findbugs on plugin